--- a/system/hddtemp/deamonset.yml
+++ b/system/hddtemp/deamonset.yml
@@ -24,7 +24,8 @@ spec:
       containers:
       - name: hddtemp
         ports:
-          - 7634:7634
+          - containerPort: 7634
+            hostPort: 7634
         securityContext:
           privileged: true
         image: modem7/hddtemp-docker:0.4.3.2
