--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -48,10 +48,10 @@ kind: Application
 metadata:
   name: metallb
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   destination:
-    namespace: metallb
+    namespace: metallb-system
   source:
     chart: metallb
     repoURL: https://metallb.github.io/metallb
@@ -64,10 +64,10 @@ kind: Application
 metadata:
   name: metallb-configs
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   destination:
-    namespace: metallb
+    namespace: metallb-system
   source:
     repoURL: https://github.com/Simon-Boyer/homeserver-init
     targetRevision: main
@@ -151,3 +151,25 @@ spec:
     repoURL: https://github.com/Simon-Boyer/homeserver-init
     targetRevision: main
     path: system/rook-ceph
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: contour
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
+spec:
+  destination:
+    namespace: contour
+  source:
+    repoURL: https://github.com/projectcontour/contour/
+    path: examples/render
+    directory:
+      include: contour-gateway-provisioner.yaml
+    targetRevision: release-1.26
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/enforce: privileged
