--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -211,6 +211,13 @@ spec:
         frontend:
           env:
             BACKEND_HOSTNAME: api.piped.codegameeat.com
+        backend:
+          config:
+            PORT: 8080
+            NUM_WORKERS: 2
+            PROXY_PART: https://ytproxy.piped.codegameeat.com
+            API_URL: https://api.piped.codegameeat.com
+            FRONTEND_URL: https://piped.codegameeat.com
         ingress:
           main:
             hosts:
