--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -195,6 +195,25 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  name: cert-manager
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
+spec:
+  destination:
+    namespace: cert-manager
+  source:
+    chart: cert-manager
+    repoURL: https://charts.rook.io/release
+    targetRevision: 1.13.1
+    helm:
+      releaseName: rook-ceph
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
   name: piped
   annotations:
     argocd.argoproj.io/sync-wave: "5"
