--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -147,20 +147,6 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ceph-configs
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
-spec:
-  destination:
-    namespace: rook-ceph
-  source:
-    repoURL: https://github.com/Simon-Boyer/homeserver-init
-    targetRevision: main
-    path: system/rook-ceph
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
   name: contour
   annotations:
     argocd.argoproj.io/sync-wave: "2"
@@ -211,50 +197,50 @@ spec:
     syncOptions:
     - CreateNamespace=true
 ---
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: piped
-  annotations:
-    argocd.argoproj.io/sync-wave: "5"
-spec:
-  destination:
-    namespace: piped
-  source:
-    chart: piped
-    repoURL: https://helm.piped.video
-    targetRevision: 4.0.0
-    helm:
-      releaseName: piped
-      valuesObject:
-        frontend:
-          env:
-            BACKEND_HOSTNAME: api.piped.codegameeat.com
-        backend:
-          config:
-            PORT: 8080
-            NUM_WORKERS: 2
-            PROXY_PART: http://ytproxy.piped.codegameeat.com
-            API_URL: http://api.piped.codegameeat.com
-            FRONTEND_URL: http://piped.codegameeat.com
-        ingress:
-          main:
-            hosts:
-              - host: piped.codegameeat.com
-                paths:
-                  - path: "/"
-          backend:
-            ingressClassName: contour
-            hosts:
-              - host: api.piped.codegameeat.com
-                paths:
-                  - path: "/"
-          ytproxy:
-            ingressClassName: contour
-            hosts:
-              - host: ytproxy.piped.codegameeat.com
-                paths:
-                  - path: "/"
-  syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: piped
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "5"
+# spec:
+#   destination:
+#     namespace: piped
+#   source:
+#     chart: piped
+#     repoURL: https://helm.piped.video
+#     targetRevision: 4.0.0
+#     helm:
+#       releaseName: piped
+#       valuesObject:
+#         frontend:
+#           env:
+#             BACKEND_HOSTNAME: api.piped.codegameeat.com
+#         backend:
+#           config:
+#             PORT: 8080
+#             NUM_WORKERS: 2
+#             PROXY_PART: http://ytproxy.piped.codegameeat.com
+#             API_URL: http://api.piped.codegameeat.com
+#             FRONTEND_URL: http://piped.codegameeat.com
+#         ingress:
+#           main:
+#             hosts:
+#               - host: piped.codegameeat.com
+#                 paths:
+#                   - path: "/"
+#           backend:
+#             ingressClassName: contour
+#             hosts:
+#               - host: api.piped.codegameeat.com
+#                 paths:
+#                   - path: "/"
+#           ytproxy:
+#             ingressClassName: contour
+#             hosts:
+#               - host: ytproxy.piped.codegameeat.com
+#                 paths:
+#                   - path: "/"
+#   syncPolicy:
+#     syncOptions:
+#     - CreateNamespace=true
