--- a/system/gateway/internal-gateway.yml
+++ b/system/gateway/internal-gateway.yml
@@ -2,33 +2,39 @@ kind: ContourDeployment
 apiVersion: projectcontour.io/v1alpha1
 metadata:
   namespace: projectcontour
-  name: public-contour-config
+  name: internal-contour-config
 spec:
   envoy:
     networkPublishing:
       serviceAnnotations:
-        metallb.universe.tf/address-pool: ingress-ip
+        metallb.universe.tf/address-pool: internal-ip
 ---
 kind: GatewayClass
 apiVersion: gateway.networking.k8s.io/v1beta1
 metadata:
-  name: contour
+  name: internal-contour
 spec:
   controllerName: projectcontour.io/gateway-controller
   parametersRef:
     kind: ContourDeployment
     group: projectcontour.io
-    name: public-contour-config
+    name: internal-contour-config
     namespace: projectcontour
 ---
 kind: Gateway
 apiVersion: gateway.networking.k8s.io/v1beta1
 metadata:
-  name: contour
+  name: internal-contour
   namespace: projectcontour
 spec:
   gatewayClassName: contour
   listeners:
+    - name: http
+      protocol: HTTP
+      port: 80
+      allowedRoutes:
+        namespaces:
+          from: All
     - name: https
       protocol: projectcontour.io/https
       port: 443
