--- a/system/gateway/internal-gateway.yml
+++ b/system/gateway/internal-gateway.yml
@@ -7,8 +7,7 @@ spec:
   runtimeSettings:
     ingress:
       classNames:
-        - contour
-        - external-contour
+        - internal-contour
   envoy:
     networkPublishing:
       serviceAnnotations:
