--- a/system/gateway/metallb-ips.yml
+++ b/system/gateway/metallb-ips.yml
@@ -19,6 +19,16 @@ spec:
   - 192.168.100.3/32
 ---
 apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: tailscale-ip
+  namespace: metallb-system
+spec:
+  autoAssign: false
+  addresses:
+  - 192.168.100.4/32
+---
+apiVersion: metallb.io/v1beta1
 kind: BGPAdvertisement
 metadata:
   name: external
@@ -27,3 +37,4 @@ spec:
   ipAddressPools:
   - ingress-ip
   - internal-ip
+  - tailscale-ip
